<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/employee_details_activity_padding"
    tools:context=".views.activities.EmployeeDetailsActivity">


    <TextView
        android:id="@+id/tv_personal_info"
        style="@style/EmployeeDetailsTextViewHeadersStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        app:layout_constraintBottom_toTopOf="@id/line_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        android:background="@color/LightGreen"
        android:backgroundTint="@color/LightGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_info" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/personal_info_container"
        style="@style/InfoContainersCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_work_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_one">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_email"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:text="@string/employee_email"
                app:layout_constraintBottom_toTopOf="@id/tv_website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_website"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_website"
                android:drawableLeft="@drawable/ic_web"
                android:drawableStart="@drawable/ic_web"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toTopOf="@id/tv_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_website" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_work_info"
        style="@style/EmployeeDetailsTextViewHeadersStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/work_information"
        app:layout_constraintBottom_toTopOf="@id/line_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_info_container" />

    <View
        android:id="@+id/line_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        android:background="@color/LightGreen"
        android:backgroundTint="@color/LightGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_work_info" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/work_info_container"
        style="@style/InfoContainersCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_address_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_two">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_company_name"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:drawableStart="@drawable/ic_home_work"
                android:drawableLeft="@drawable/ic_home_work"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toTopOf="@id/tv_company_role"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_company_role"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_role"
                android:drawableStart="@drawable/ic_work"
                android:drawableLeft="@drawable/ic_work"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toTopOf="@id/tv_employee_bs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

            <TextView
                android:id="@+id/tv_employee_bs"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_bs"
                android:drawableStart="@drawable/ic_bs_degree"
                android:drawableLeft="@drawable/ic_bs_degree"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_company_role" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_address_info"
        style="@style/EmployeeDetailsTextViewHeadersStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_information"
        app:layout_constraintBottom_toTopOf="@id/line_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_info_container" />

    <View
        android:id="@+id/line_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines_height"
        android:background="@color/LightGreen"
        android:backgroundTint="@color/LightGreen"
        app:layout_constraintBottom_toTopOf="@id/address_info_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_info" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/address_info_container"
        style="@style/InfoContainersCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_three">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_city"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:drawableStart="@drawable/ic_city"
                android:drawableLeft="@drawable/ic_city"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toTopOf="@id/tv_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_street"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:drawableStart="@drawable/ic_road"
                android:drawableLeft="@drawable/ic_road"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toTopOf="@id/tv_zipcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />

            <TextView
                android:id="@+id/tv_zipcode"
                style="@style/EmployeeDetailsTextViewInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                android:drawableStart="@drawable/ic_code"
                android:drawableLeft="@drawable/ic_code"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_street" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>


